--- a/dumbhippo/trunk/client/windows/airbag/airbag.vcproj
+++ b/dumbhippo/trunk/client/windows/airbag/airbag.vcproj
@@ -20,7 +20,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\HippoDebug.vsprops;.\airbag.vsprops"
+			InheritedPropertySheets="..\Sheets\HippoDebug.vsprops;.\airbag.vsprops"
 			CharacterSet="1"
 			>
 			<Tool
