Fix few .vsprops references that didn't get caught in the last pass due to case issues

--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -75,7 +75,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\hippoRelease.vsprops;.\HippoCommon.vsprops"
+			InheritedPropertySheets="..\Sheets\hippoRelease.vsprops;.\HippoCommon.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
