--- a/dumbhippo/trunk/client/windows/airbag/airbag.vcproj
+++ b/dumbhippo/trunk/client/windows/airbag/airbag.vcproj
@@ -75,7 +75,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\hippoRelease.vsprops;.\airbag.vsprops"
+			InheritedPropertySheets="..\Sheets\hippoRelease.vsprops;.\airbag.vsprops"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
