--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -32,8 +32,11 @@ mugshot_SOURCES	=				\
 	src/hippo-cookies-linux.h		\
 	src/hippo-dbus-client.c			\
 	src/hippo-dbus-client.h			\
+	src/hippo-dbus-cookies.c		\
+	src/hippo-dbus-cookies.h		\
 	src/hippo-dbus-server.c			\
 	src/hippo-dbus-server.h			\
+	src/hippo-dbus-web.h			\
 	src/hippo-embedded-image.c		\
 	src/hippo-embedded-image.h		\
 	src/hippo-http.c			\
