Commit version 1.1.85 (made tarballs a while ago) Set manifest tool properties in HippoUI.vcproj, some reason they weren't getting saved in HippoUI.vsprops (VS bug, apparently)

--- a/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
@@ -59,6 +59,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="HippoUI.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -126,6 +127,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="HippoUI.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
