- add IQs for getting your contacts and groups - commit old S3-related config properties changes, may explain why file sharing is busted on dogfood

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -142,6 +142,13 @@
 	<!-- you have to create an Amazon web services account and put the key here -->
 	<parameter name="amazonAccessKeyId"></parameter>
 	
+	<!-- you have to create an Amazon web services account and put the secret key here if using certain features (e.g. that rely on S3 storage) -->
+	<parameter name="amazonSecretKey"></parameter>	
+	
+	<!-- S3 files have to be placed in a bucket, which is globally unique for all S3 users, so everyone has to 
+	     make up an S3 bucket name -->
+	<parameter name="amazonS3Bucket"></parameter>
+	
 	<!-- if you participate in the Amazon affiliate program, optionally put your affiliate tag here -->
 	<parameter name="amazonAssociateTag"></parameter>	
 	
