- Fix earlier committed Firefox-on-Windows cookie code to compile and work - Add hippo-netflix-move.[ch] to the windows build - Copy netflix_no_image.png along with other images

--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -420,6 +420,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\hippo\hippo-netflix-movie.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\hippo\hippo-object-cache.c"
 				>
 			</File>
@@ -755,6 +759,10 @@
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-myspace.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-netflix-movie.h"
 				>
 			</File>
 			<File
