* Add an ACCOUNT_QUESTION block type which is meant for us asking   users to enable account features.
* Allow system message blocks be "pinned" to the top of the browser
  window. (ACCOUNT_QUESTION blocks are so pinned until they are
  answered)

* Add a "message_block" display style for HippoCanvasBlock where
  it has a solid yellow background instead of a gradient.

* Add a applicationUsageEnabled preference for whether we collect
  application usage statitistics. (Not hooked up to anything in this
  commit.)

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -164,6 +164,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-block-group-chat.h		\
 	$(COMMONSRCDIR)/hippo/hippo-block-group-member.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-group-member.h	\
+	$(COMMONSRCDIR)/hippo/hippo-block-account-question.c	\
+	$(COMMONSRCDIR)/hippo/hippo-block-account-question.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-abstract-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-abstract-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-facebook-person.c	\
@@ -188,6 +190,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-base.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-account-question.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-account-question.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-generic.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-generic.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-flickr-person.c	\
