--- a/dumbhippo/trunk/client/common/cairo/configure.in
+++ b/dumbhippo/trunk/client/common/cairo/configure.in
@@ -229,11 +229,10 @@ dnl
 have_wfopen=false
 AC_CHECK_FUNCS(_wfopen wfopen, [have_wfopen=true])
 
-use_wfopen=false
 if $have_wfopen; then
     case "$host" in
         *-*-mingw*|*-*-cygwin*)
-            AC_DEFINE(USE_UTF16_WFOPEN, 1, [define if we cairo convert filenames to UTF-16 and use wfopen()])
+            AC_DEFINE(USE_UTF16_WFOPEN, 1, [define if cairo should convert filenames to UTF-16 and use wfopen()])
         ;;
     esac
 fi
