Start of server-side of application database
Application ApplicationCategory ApplicationWmClass:
  Persistence classes for storing parsed Application information
AppinfoUpload: Record uploads of .dappinfo files
AppinfoFile IconInfo: JarFile subclass for reading .dappinfo files
ApplicationSystem ApplicationSystemBean: Central "system" EJB
 for the application database
AppinfoUploadServlet servlet-info.xml: Upload servlet for .dappinfo
 files
base.conf HippoProperty properties-service.xml: Add a directory to
 the configuration for storing.dappinfo files.
tools.dappinfo: Make 'dappinfo upload' work

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -220,6 +220,7 @@
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
 		<parameter name="luceneIndexDir">$targetdir/data/index</parameter>
         <parameter name="crashdumpDir">$targetdir/data/crashdump</parameter>
+        <parameter name="appinfoDir">$targetdir/data/appinfo</parameter>
 
 		<parameter name="jbossClusterEnabled">no</parameter>
 		<parameter name="jbossPartition">default</parameter>
@@ -297,6 +298,7 @@
 			   dest="deploy/dumbhippo.war"
 			   hot="yes"/> -->
 
+		<targetAttributes pattern="/data/appinfo"    ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/crashdump"  ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/files"	     ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/index"	     ignore="yes" preserve="yes"/>
