Add more stuff to client jar. (We really need to build the hippo plugin against the full jar not the client jar!)

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -342,6 +342,7 @@
 				<include name="**/persistence/**/*.class" />
 				<!-- server+util but not server/impl -->
 				<include name="**/server/*.class" />
+				<include name="**/server/listeners/*.class" />
 				<include name="**/server/applications/*.class" />
 				<include name="**/server/blocks/*.class" />
 				<include name="**/server/util/*.class" />
