Propagate external account changes over XMPP.

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -345,6 +345,7 @@
 				<include name="**/server/listeners/*.class" />
 				<include name="**/server/applications/*.class" />
 				<include name="**/server/blocks/*.class" />
+				<include name="**/server/listeners/*.class" />	
 				<include name="**/server/util/*.class" />
 				<include name="**/server/views/*.class" />
 			</fileset>
