configure.ac: Add checks for PCRE (used only on Linux)
hippo-data-cache[-internal.h,.c,.h] hippo-connection.[ch] hippo-title-pattern.[ch]:
  Track title => application matches provided by the server.

hippo-idle.[ch] main.c: Try title pattern matches before falling back
  to sending the WM class to the server.

hippo-data-cache.[ch] hippo-connection.c: Fix some places where we
  had a strange convention and passed ownership of list elements but
  not the list.

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -292,6 +292,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-surface.h			\
 	$(COMMONSRCDIR)/hippo/hippo-thumbnails.c		\
 	$(COMMONSRCDIR)/hippo/hippo-thumbnails.h		\
+	$(COMMONSRCDIR)/hippo/hippo-title-pattern.c		\
+	$(COMMONSRCDIR)/hippo/hippo-title-pattern.h		\
 	$(COMMONSRCDIR)/hippo/hippo-track.c			\
 	$(COMMONSRCDIR)/hippo/hippo-track.h			\
 	$(COMMONSRCDIR)/hippo/hippo-window.c			\
